# ai4animals

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
audio_eda/: README.md  pyproject.toml
audio_eda/audio_eda/: embed.py  interpretation.py  representation.py  stumpy_analysis.py
audio_eda/report/: Makefile  README.md
audio_eda/workflow/00_download/: birdclef.sbatch  filenames.txt  pacific_sounds.sbatch
audio_eda/workflow/01_embed/: workflow.py
audio_eda/workflow/02_eda/: interpretation.py  representation.py  stumpy_analysis.py  workflow.py
audio_eda/workflow/02_eda/results/: natural_k.json  schema_and_counts.txt  scree_plot_data.txt  top_discords.csv  top_motifs.csv
audio_eda/workflow/02_eda/results/export/: _motifs_exported.txt
audio_eda/workflow/02_embed/: workflow.py
audio_eda/workflow/03_birdclef/: eda.py  eda.sbatch  embed.py  embed.sbatch
audio_eda/workflow/03_birdclef/results_window_20/: natural_k.json  scree_plot_data.txt  top_discords.csv  top_motifs.csv
audio_eda/workflow/03_birdclef/results_window_20/export/: _discords_exported.txt
audio_eda/workflow/03_birdclef/results_window_5/: natural_k.json  schema_and_counts.txt  top_discords.csv  top_motifs.csv
sensor_eda/: README.md  main.py  pyproject.toml
sensor_eda/report/: main.md
sensor_eda/workflow/01_download/: DATASET.md  download.sbatch  urls.txt
sensor_eda/workflow/02_eda/: eda.ipynb  eda_ticc_prod.ipynb  eda_ticc_prod_v5.ipynb  eda_ticc_prod_v6.ipynb  ticc.ipynb  ticc_prod.py  ticc_prod.sbatch  ticc_test.py  ticc_test.sbatch  ticc_test_fit.py  ticc_test_fit.sbatch
visual_eda/: README.md  pyproject.toml
visual_eda/report/: Makefile  README.md
visual_eda/visual_eda/: spark.py
visual_eda/workflow/00_download/: mabe.sbatch
visual_eda/workflow/01_eda/: first_look.ipynb
visual_eda/workflow/02_wildlife_datasets/: eda.ipynb  inference.py  summary_maximg3_B20.csv
