[project]
name = "sensor-eda"
version = "0.1.0"
description = "exploratory data analysis of sensor data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pyspark>=4.0.1",
    "ticc",
    "umap-learn>=0.5.9.post2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.8",
]

[tool.uv.sources]
ticc = { workspace = true }
