[project]
name = "visual-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.5.5",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pyspark>=4.0.1",
    "torch>=2.9.0",
    "umap-learn>=0.5.9.post2",
]
