[project]
name = "visual-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning>=2.5.5",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pyspark>=4.0.1",
    "torch>=2.9.0",
    "umap-learn>=0.5.9.post2",
    "wildlife-datasets>=1.0.7",
    "wildlife-tools",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.8",
]

[tool.setuptools]
packages = ["visual_eda"]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
wildlife-tools = { git = "https://github.com/WildlifeDatasets/wildlife-tools" }
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
